--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "url = 'https://commondatastorage.googleapis.com/books1000/'\n",
     "last_percent_reported = None\n",
-    "data_root = 'data/' # Change me to store data elsewhere"
+    "data_root = 'data/'  # Change me to store data elsewhere"
    ]
   },
   {
@@ -82,11 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found and verified data/notMNIST_large.tar.gz\nFound and verified data/notMNIST_small.tar.gz\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "train_filename = maybe_download('notMNIST_large.tar.gz', 247336696)\n",
+    "test_filename = maybe_download('notMNIST_small.tar.gz', 8458043)"
    ]
   },
   {
