load dataset function skeleton

--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,38 +100,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "train_tar = tarfile.open(train_filename)\n",
+    "test_tar = tarfile.open(test_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "# test_tar.getnames()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "def load_dataset():\n",
+    "    def load_images_and_labels(filename):\n",
+    "        x = []\n",
+    "        y = []\n",
+    "        print(filename)\n",
+    "        return x, y\n",
+    "        \n",
+    "    x_train, y_train = load_images_and_labels(train_filename)\n",
+    "    x_test, y_test = load_images_and_labels(test_filename)\n",
+    "    return x_train, y_train, x_test, y_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/notMNIST_large.tar.gz\ndata/notMNIST_small.tar.gz\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "_ = load_dataset()"
    ]
   }
  ],
