--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -104,16 +104,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "num_classes = 10\n",
+    "np.random.seed(133)\n",
+    "\n",
+    "def maybe_extract(filename, force=False):\n",
+    "  root = os.path.splitext(os.path.splitext(filename)[0])[0]  # remove .tar.gz\n",
+    "  if os.path.isdir(root) and not force:\n",
+    "    # You may override by setting force=True.\n",
+    "    print('%s already present - Skipping extraction of %s.' % (root, filename))\n",
+    "  else:\n",
+    "    print('Extracting data for %s. This may take a while. Please wait.' % root)\n",
+    "    tar = tarfile.open(filename)\n",
+    "    sys.stdout.flush()\n",
+    "    tar.extractall(data_root)\n",
+    "    tar.close()\n",
+    "  data_folders = [\n",
+    "    os.path.join(root, d) for d in sorted(os.listdir(root))\n",
+    "    if os.path.isdir(os.path.join(root, d))]\n",
+    "  if len(data_folders) != num_classes:\n",
+    "    raise Exception(\n",
+    "      'Expected %d folders, one per class. Found %d instead.' % (\n",
+    "        num_classes, len(data_folders)))\n",
+    "  print(data_folders)\n",
+    "  return data_folders"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting data for data/notMNIST_large. This may take a while. Please wait.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['data/notMNIST_large/A', 'data/notMNIST_large/B', 'data/notMNIST_large/C', 'data/notMNIST_large/D', 'data/notMNIST_large/E', 'data/notMNIST_large/F', 'data/notMNIST_large/G', 'data/notMNIST_large/H', 'data/notMNIST_large/I', 'data/notMNIST_large/J']\nExtracting data for data/notMNIST_small. This may take a while. Please wait.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['data/notMNIST_small/A', 'data/notMNIST_small/B', 'data/notMNIST_small/C', 'data/notMNIST_small/D', 'data/notMNIST_small/E', 'data/notMNIST_small/F', 'data/notMNIST_small/G', 'data/notMNIST_small/H', 'data/notMNIST_small/I', 'data/notMNIST_small/J']\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "train_folders = maybe_extract(train_filename)\n",
+    "test_folders = maybe_extract(test_filename)"
    ]
   },
   {
