extracted data to .pickle files

--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,28 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting data for data/notMNIST_large. This may take a while. Please wait.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['data/notMNIST_large/A', 'data/notMNIST_large/B', 'data/notMNIST_large/C', 'data/notMNIST_large/D', 'data/notMNIST_large/E', 'data/notMNIST_large/F', 'data/notMNIST_large/G', 'data/notMNIST_large/H', 'data/notMNIST_large/I', 'data/notMNIST_large/J']\nExtracting data for data/notMNIST_small. This may take a while. Please wait.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['data/notMNIST_small/A', 'data/notMNIST_small/B', 'data/notMNIST_small/C', 'data/notMNIST_small/D', 'data/notMNIST_small/E', 'data/notMNIST_small/F', 'data/notMNIST_small/G', 'data/notMNIST_small/H', 'data/notMNIST_small/I', 'data/notMNIST_small/J']\n"
+      "data/notMNIST_large already present - Skipping extraction of data/notMNIST_large.tar.gz.\n['data/notMNIST_large/A', 'data/notMNIST_large/B', 'data/notMNIST_large/C', 'data/notMNIST_large/D', 'data/notMNIST_large/E', 'data/notMNIST_large/F', 'data/notMNIST_large/G', 'data/notMNIST_large/H', 'data/notMNIST_large/I', 'data/notMNIST_large/J']\ndata/notMNIST_small already present - Skipping extraction of data/notMNIST_small.tar.gz.\n['data/notMNIST_small/A', 'data/notMNIST_small/B', 'data/notMNIST_small/C', 'data/notMNIST_small/D', 'data/notMNIST_small/E', 'data/notMNIST_small/F', 'data/notMNIST_small/G', 'data/notMNIST_small/H', 'data/notMNIST_small/I', 'data/notMNIST_small/J']\n"
      ]
     }
    ],
@@ -172,7 +158,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_size = 28  # Pixel width and height.\n",
+    "pixel_depth = 255.0  # Number of levels per pixel.\n",
+    "\n",
+    "def load_letter(folder, min_num_images):\n",
+    "  \"\"\"Load the data for a single letter label.\"\"\"\n",
+    "  image_files = os.listdir(folder)\n",
+    "  dataset = np.ndarray(shape=(len(image_files), image_size, image_size),\n",
+    "                         dtype=np.float32)\n",
+    "  print(folder)\n",
+    "  num_images = 0\n",
+    "  for image in image_files:\n",
+    "    image_file = os.path.join(folder, image)\n",
+    "    try:\n",
+    "      image_data = (imageio.imread(image_file).astype(float) - \n",
+    "                    pixel_depth / 2) / pixel_depth\n",
+    "      if image_data.shape != (image_size, image_size):\n",
+    "        raise Exception('Unexpected image shape: %s' % str(image_data.shape))\n",
+    "      dataset[num_images, :, :] = image_data\n",
+    "      num_images = num_images + 1\n",
+    "    except (IOError, ValueError) as e:\n",
+    "      print('Could not read:', image_file, ':', e, '- it\\'s ok, skipping.')\n",
+    "    \n",
+    "  dataset = dataset[0:num_images, :, :]\n",
+    "  if num_images < min_num_images:\n",
+    "    raise Exception('Many fewer images than expected: %d < %d' %\n",
+    "                    (num_images, min_num_images))\n",
+    "    \n",
+    "  print('Full dataset tensor:', dataset.shape)\n",
+    "  print('Mean:', np.mean(dataset))\n",
+    "  print('Standard deviation:', np.std(dataset))\n",
+    "  return dataset\n",
+    "        \n",
+    "def maybe_pickle(data_folders, min_num_images_per_class, force=False):\n",
+    "  dataset_names = []\n",
+    "  for folder in data_folders:\n",
+    "    set_filename = folder + '.pickle'\n",
+    "    dataset_names.append(set_filename)\n",
+    "    if os.path.exists(set_filename) and not force:\n",
+    "      # You may override by setting force=True.\n",
+    "      print('%s already present - Skipping pickling.' % set_filename)\n",
+    "    else:\n",
+    "      print('Pickling %s.' % set_filename)\n",
+    "      dataset = load_letter(folder, min_num_images_per_class)\n",
+    "      try:\n",
+    "        with open(set_filename, 'wb') as f:\n",
+    "          pickle.dump(dataset, f, pickle.HIGHEST_PROTOCOL)\n",
+    "      except Exception as e:\n",
+    "        print('Unable to save data to', set_filename, ':', e)\n",
+    "  \n",
+    "  return dataset_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/notMNIST_large/A.pickle already present - Skipping pickling.\ndata/notMNIST_large/B.pickle already present - Skipping pickling.\ndata/notMNIST_large/C.pickle already present - Skipping pickling.\ndata/notMNIST_large/D.pickle already present - Skipping pickling.\ndata/notMNIST_large/E.pickle already present - Skipping pickling.\ndata/notMNIST_large/F.pickle already present - Skipping pickling.\ndata/notMNIST_large/G.pickle already present - Skipping pickling.\ndata/notMNIST_large/H.pickle already present - Skipping pickling.\ndata/notMNIST_large/I.pickle already present - Skipping pickling.\ndata/notMNIST_large/J.pickle already present - Skipping pickling.\ndata/notMNIST_small/A.pickle already present - Skipping pickling.\ndata/notMNIST_small/B.pickle already present - Skipping pickling.\ndata/notMNIST_small/C.pickle already present - Skipping pickling.\ndata/notMNIST_small/D.pickle already present - Skipping pickling.\ndata/notMNIST_small/E.pickle already present - Skipping pickling.\ndata/notMNIST_small/F.pickle already present - Skipping pickling.\ndata/notMNIST_small/G.pickle already present - Skipping pickling.\ndata/notMNIST_small/H.pickle already present - Skipping pickling.\ndata/notMNIST_small/I.pickle already present - Skipping pickling.\ndata/notMNIST_small/J.pickle already present - Skipping pickling.\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_datasets = maybe_pickle(train_folders, 45000)\n",
+    "test_datasets = maybe_pickle(test_folders, 1800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
