display img, randomize data

--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -310,20 +310,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x1472a3710>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADzdJREFUeJzt3V2MXOV9x/Hfb2d3HdtJeG0Xi7gBEqcSosJptlaioDYN\nTUJoWkilWnCRuhLCqZQmjZKLInpRripUNURctKlMcWOqNCQSQfgCtQJUCUWClAW5vDblzRG2DAac\nFwJmX/+92CFazJznjOftzPr//UjWzpznzJy/Z+Y3Z2ae85zHESEA+Uw0XQCAZhB+ICnCDyRF+IGk\nCD+QFOEHkiL8QFKEH0iK8ANJTY50Y+/dFNMzp1e2X7jpWPH2K6o+GnFC7rku4FRx8IVFvXJsuasw\n9BV+25dJullSS9K/RMSNpfWnZ07XtpuuqWz/79+5vbi9+VisbNvgqeJtgQx2fOaFrtft+WO/7Zak\nf5T0WUkXSrra9oW93h+A0ernO/8OSc9ExHMRsSDpdklXDKYsAMPWT/jPlbT2M8ah9rK3sb3b9pzt\nuaWfv97H5gAM0tB/7Y+IPRExGxGzk6dtHvbmAHSpn/AflrR1zfX3tZcBWAf6Cf9DkrbZPt/2tKSr\nJO0fTFkAhq3nrr6IWLL9l5L+U6tdfXsj4onybaSlld7fb95Yqe7qW3b5jEQtl7s+m+wqXI6VYvt8\nLI2oEnRrnF9P3eqrnz8i7pZ094BqATBCHN4LJEX4gaQIP5AU4QeSIvxAUoQfSGqk4/nt0PRk733W\nmyaq+07XQ79qlZbL78GbPD2iSpAJe34gKcIPJEX4gaQIP5AU4QeSIvxAUiPt6tPPJuX9Z1U2n39o\nd/HmXqh+r2odLw+xPPvio8X2By6+o9i+GMuVbXWnDa/rynt4fqHYvvPOrxTbo1VsRic1Q8AnFsrP\naZwzX2x/9pP/etIljRp7fiApwg8kRfiBpAg/kBThB5Ii/EBShB9IarRTdL/yus665YHK9uojAFZ5\nqnpoayyW+8pfvfZj5Tu/uNxc6uefcrmjva4b/sHjHyi2f/BrD5bvoHQa6Sj3Z6c1UfOsrFQ/35Kk\nHb9Vbv9kubl0uva640IGhT0/kBThB5Ii/EBShB9IivADSRF+ICnCDyTVVz+/7YOSXpO0LGkpImbL\nN5A8WdhkTf+mp6tPz13Xzx9j/DbXUnmK7jqeLpzae4V+/k7cKr8gVt4s9/PH5Bi/oLo0iIN8fj8i\nXhnA/QAYofX/9gWgJ/2GPyTda/th2+VzcAEYK/1+7L8kIg7b/nVJ99j+34i4f+0K7TeF3ZL0Lm3q\nc3MABqWvPX9EHG7/PSrpTkk7OqyzJyJmI2J2yhv62RyAAeo5/LY3237PW5clfVrS44MqDMBw9fOx\nf0bSnV4dTjop6d8j4j8GUhWAoes5/BHxnGpHwZ94IymWep+iux/uryt9qJb7/N01FgrHODCev6NY\n7m+yg4nF/l5Qx6P6OZvo46CUFXX/fNPVByRF+IGkCD+QFOEHkiL8QFKEH0hqtFN0A6eIKM/gXWuj\nq4dh93Pq7rrp4t++LoCUCD+QFOEHkiL8QFKEH0iK8ANJEX4gKfr5kVNhiuxuTB75abH9/P3lU1p6\nuc8DBSoc+dnNXa/Lnh9IivADSRF+ICnCDyRF+IGkCD+QFOEHkqKf/1RQHP89xucsX8eWXjhUbP/Q\nX5Tbh+VYvN71uuz5gaQIP5AU4QeSIvxAUoQfSIrwA0kRfiCp2n5+23slfU7S0Yi4qL3sTEnfk3Se\npIOSdkZEeYAzhqc0Np0puofD5fH4npwaUSEnWBzsefu/LemyE5ZdJ+m+iNgm6b72dQDrSG34I+J+\nScdOWHyFpH3ty/skXTngugAMWa/f+Wci4kj78ouSZgZUD4AR6fsHv4gISZVfLG3vtj1ne25R8/1u\nDsCA9Br+l2xvkaT236NVK0bEnoiYjYjZKW3ocXMABq3X8O+XtKt9eZekuwZTDoBRqQ2/7e9KekDS\nb9o+ZPsaSTdK+pTtpyX9Qfs6gHWktp8/Iq6uaLp0wLWk1epzzP3Exo3VjSuM5+/FynzN71M1x0/E\n4sIAqzkJJ3FcB0f4AUkRfiApwg8kRfiBpAg/kBThB5Li1N0DMOVWX7f/s/c+X2zf9uyLxfZW9dHV\np7RllYevbnZ1d9uBN3+jeNv9f3pJedtP/LjYroma18TKcrl9BNjzA0kRfiApwg8kRfiBpAg/kBTh\nB5Ii/EBS9POPgU0T08X2Szc23yc8jpZLpyyX1Cocf3HaxNPF29419Xs91bSesOcHkiL8QFKEH0iK\n8ANJEX4gKcIPJEX4gaTo50dK73L5GIGYPPX3i6f+/xBAR4QfSIrwA0kRfiApwg8kRfiBpAg/kFRt\nP7/tvZI+J+loRFzUXnaDpGslvdxe7fqIuHtYRY67+nHl5ffYh+fL0znvvPMrxfbob9qAdcs10xVE\nq3qF1hvl5+RDh8tzKSyVNy3VvCbGQTd7/m9LuqzD8m9GxPb2v7TBB9ar2vBHxP2Sjo2gFgAj1M93\n/i/bftT2XttnDKwiACPRa/i/JekCSdslHZH0jaoVbe+2PWd7blHzPW4OwKD1FP6IeCkiliNiRdIt\nknYU1t0TEbMRMTulDb3WCWDAegq/7S1rrn5e0uODKQfAqHTT1fddSZ+QdLbtQ5L+VtInbG+XFJIO\nSvriEGsEMAS14Y+IqzssvnUItaxbKyp3ONd1wz94/APF9g9+7cHyHbgwT33UdIajo9p+/Drr4HHn\nCD8gKcIPJEX4gaQIP5AU4QeSIvxAUpy6ewy01N/wz4kN1UdOxjrochpHsVAeZl3Xleep8rTrQ7NY\n6PY9AXt+ICnCDyRF+IGkCD+QFOEHkiL8QFKEH0iKfv4xsNzne/DKfOH0aPTzNyIWa44TGNqGu3++\n2fMDSRF+ICnCDyRF+IGkCD+QFOEHkiL8QFL08yOn0unOpdr+8sn3by22P3n9OeX7X+l+3P3JmP+7\nB7pelz0/kBThB5Ii/EBShB9IivADSRF+ICnCDyRV289ve6uk2yTNSApJeyLiZttnSvqepPMkHZS0\nMyJ+OrxSgQFyzX4vlovNSzOnF9uf/6Nbiu3LUT1XQ6uutoId//RK1+t2s5UlSV+PiAslfVTSl2xf\nKOk6SfdFxDZJ97WvA1gnasMfEUci4pH25dckPSXpXElXSNrXXm2fpCuHVSSAwTupzxe2z5P0YUk/\nkjQTEUfaTS9q9WsBgHWi6/DbfrekOyR9NSJ+sbYtVieE63gwtO3dtudszy2qcK45ACPVVfhtT2k1\n+N+JiB+0F79ke0u7fYuko51uGxF7ImI2ImanVD2hJIDRqg2/bUu6VdJTEXHTmqb9kna1L++SdNfg\nywMwLN0M6f24pC9Iesz2gfay6yXdKOn7tq+R9BNJO4dTIjB+3OcZ0Y9H9am9J6L3rr6Vzt++O6oN\nf0T8UFLV4ONLu94SgLHCEX5AUoQfSIrwA0kRfiApwg8kRfiBpEZ76m5LnixssmYoo6enKtvqpkTu\no+t06FqqHt7ZDU9PVzeuMEV3J26VXxArb5aH9K5M9feC2ujq56yfIb0Tlb3yndYFkBLhB5Ii/EBS\nhB9IivADSRF+ICnCDyQ12n7+kGJpaaSbfIv760ofquU+34NjoXCMQ81U01nFcquv23tpjF9QXWLP\nDyRF+IGkCD+QFOEHkiL8QFKEH0iK8ANJjbSff+nszXr1Tz5W2f7qb5fHUHuh+r2qdbw8jvnsiztO\nKNS1KVf3C5/MGOpOPrrx2WL7TTf9YbE9+uuyzqnmxPsTC+XnNM7pb+q5fsbsD0rzFQBoBOEHkiL8\nQFKEH0iK8ANJEX4gKcIPJFXbz297q6TbJM1ICkl7IuJm2zdIulbSy+1Vr4+Iu4t3dvqS4o9frWx+\n/iPfL958PhYr2za4+pz+g1Dq5+/XRzYUzrsv6dmr/nlo20Ze3RzksyTp6xHxiO33SHrY9j3ttm9G\nxD8MrzwAw1Ib/og4IulI+/Jrtp+SdO6wCwMwXCf1nd/2eZI+LOlH7UVftv2o7b22z6i4zW7bc7bn\nln7+Rl/FAhicrsNv+92S7pD01Yj4haRvSbpA0natfjL4RqfbRcSeiJiNiNnJ0zYNoGQAg9BV+G1P\naTX434mIH0hSRLwUEcsRsSLpFkk7hlcmgEGrDb9tS7pV0lMRcdOa5VvWrPZ5SY8PvjwAw9LNr/0f\nl/QFSY/ZPtBedr2kq21v12r330FJX6y7owhrYan3UcRvrFR39S3XDNFsuTxEc9hdhSXLUT4N9Hw0\nc7pzVBvn11O3uvm1/4dSxwHr5T59AGONI/yApAg/kBThB5Ii/EBShB9IivADSY301N22NDnR+9TG\nmyaq+07XQ79qlbrTOG9yecgv0Av2/EBShB9IivADSRF+ICnCDyRF+IGkCD+QlCPK4+AHujH7ZUk/\nWbPobEmvjKyAkzOutY1rXRK19WqQtb0/In6tmxVHGv53bNyei4jZxgooGNfaxrUuidp61VRtfOwH\nkiL8QFJNh39Pw9svGdfaxrUuidp61UhtjX7nB9Ccpvf8ABrSSPhtX2b7x7afsX1dEzVUsX3Q9mO2\nD9iea7iWvbaP2n58zbIzbd9j++n2347TpDVU2w22D7cfuwO2L2+otq22/8v2k7afsP1X7eWNPnaF\nuhp53Eb+sd92S9L/SfqUpEOSHpJ0dUQ8OdJCKtg+KGk2IhrvE7b9u5J+Kem2iLiovezvJR2LiBvb\nb5xnRMRfj0ltN0j6ZdMzN7cnlNmydmZpSVdK+nM1+NgV6tqpBh63Jvb8OyQ9ExHPRcSCpNslXdFA\nHWMvIu6XdOyExVdI2te+vE+rL56Rq6htLETEkYh4pH35NUlvzSzd6GNXqKsRTYT/XEkvrLl+SOM1\n5XdIutf2w7Z3N11MBzPtadMl6UVJM00W00HtzM2jdMLM0mPz2PUy4/Wg8YPfO10SEdslfVbSl9of\nb8dSrH5nG6fumq5mbh6VDjNL/0qTj12vM14PWhPhPyxp65rr72svGwsRcbj996ikOzV+sw+/9NYk\nqe2/Rxuu51fGaebmTjNLawweu3Ga8bqJ8D8kaZvt821PS7pK0v4G6ngH25vbP8TI9mZJn9b4zT68\nX9Ku9uVdku5qsJa3GZeZm6tmllbDj93YzXgdESP/J+lyrf7i/6ykv2mihoq6LpD0P+1/TzRdm6Tv\navVj4KJWfxu5RtJZku6T9LSkeyWdOUa1/ZukxyQ9qtWgbWmotku0+pH+UUkH2v8ub/qxK9TVyOPG\nEX5AUvzgByRF+IGkCD+QFOEHkiL8QFKEH0iK8ANJEX4gqf8H8XKUZmvrg/gAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1470959e8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    ""
+    "plt.imshow(train_dataset[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "def randomize(dataset, labels):\n",
+    "  permutation = np.random.permutation(labels.shape[0])\n",
+    "  shuffled_dataset = dataset[permutation,:,:]\n",
+    "  shuffled_labels = labels[permutation]\n",
+    "  return shuffled_dataset, shuffled_labels\n",
+    "\n",
+    "train_dataset, train_labels = randomize(train_dataset, train_labels)\n",
+    "test_dataset, test_labels = randomize(test_dataset, test_labels)\n",
+    "valid_dataset, valid_labels = randomize(valid_dataset, valid_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x16e989320>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADjBJREFUeJzt3W2MXOV5xvHr2vXa5i2WF9qtY5wQFDcCpSpRV05LUZWI\nJCJIkeFLFNRUjgQ1lRKUVBEKomrDt6AqL0qjKKoDbpyWElUKCEtFjYyFRFIixIJcMDitCTXFjrGh\npsYYsPfl7oc9jjaw5znDzsuZ5f7/pNXOnHvOnnvO7DVvz5l5HBECkM9I2w0AaAfhB5Ii/EBShB9I\nivADSRF+ICnCDyRF+IGkCD+Q1IpBbmxszdmxcmJNbf2i1f9bXH9U9UcjrnD5fmxELjfXR1HouxNu\nsfc2Lef9Nqu5Yn26cNWarvWBN86vrZ0+clzTx1/r6Ip3FX7bV0n6tqRRSXdExO2ly6+cWKMPfmdL\nbf2OS/6puL3zRmZraxeMrCyue3ZDvZ9mo/yP0GS04Y7tnWo577fjc68X60dm66/bdJT7vmHfZ2tr\ne2/aUW5sgSXvHdujkr4r6ZOSLpV0ne1Ll/r3AAxWN3eNmyQ9ExHPRsRpST+StLk3bQHot27Cv17S\n8wvOH6yW/QbbW21P2Z6aOf5aF5sD0Et9f1EUEdsiYjIiJlesObvfmwPQoW7Cf0jShgXnL6yWAVgG\nugn/o5I22n6f7ZWSPiNpZ2/aAtBvSx7qi4gZ21+Q9BPND/Vtj4iniht7bk7jf3G6tn7zuZ8rbnNu\ndX27s2eNFdedOad8VV9dX17/5Uvqa5su/0Vx3e++51+L9bWj5ZdDTUNey3UosNvr9fJs+T2kG5/7\nVG1tz09/t7juu35ZLOvcQzPF+sr/q/8/l6TR1+rrnq4f0pak8ZP1w4grftX58GhX4/wRcb+k+7v5\nGwDasTwfMgB0jfADSRF+ICnCDyRF+IGkCD+QlAc5Y8+7PB4f9pUD214veaz+I8ExXR7T/Z+vXl6s\nP3zD14v1bo4DaPsYgG56e3XujWL9D/7hL4v1i/7657W10u0pNd+mw+qR2K1X4lhHn+fnkR9IivAD\nSRF+ICnCDyRF+IGkCD+Q1OCH+kY+VuimvfsijzSMjoyO1tdmyx/B9Iryhyff81B5239/Yf2QlSSd\niuna2iqXP6rcb9309oVDHy7Wn71yVbE+++rJ2prHGj7Q2nCbxtzgcrPIxmtLj8w9wFAfgDLCDyRF\n+IGkCD+QFOEHkiL8QFKEH0hqoFN0S5JKxxVEeWy1nxonhJ2p/6rmkdWri6vOvVH+aOrzJ9/dsPGc\nDpwcL9ZnXzlcrJdul6bbJAMe+YGkCD+QFOEHkiL8QFKEH0iK8ANJEX4gqa7G+W0fkHRC0qykmYiY\n7EVTy85Id/ehp2a7O9xitnTsREef7O6fbnp7fab8ef/Gvdbl7fJO14uDfD4aES/14O8AGCDuGoGk\nug1/SHrA9mO2t/aiIQCD0e3T/isi4pDt35a0y/YvIuKhhReo7hS2StJqlaedAjA4XT3yR8Sh6vdR\nSfdK2rTIZbZFxGRETI6p/IWLAAZnyeG3fY7t886clvQJSXt71RiA/urmaf+EpHttn/k7/xwR/9aT\nrgD03ZLDHxHPSvr9HvaS1ly0PBg/pNgv/cVQH5AU4QeSIvxAUoQfSIrwA0kRfiApwg8kRfiBpAg/\nkBThB5Ii/EBShB9IivADSRF+ICnCDyRF+IGkCD+QFOEHkiL8QFKEH0iK8ANJEX4gKcIPJEX4gaQI\nP5AU4QeSIvxAUoQfSIrwA0kRfiCpxvDb3m77qO29C5aN295le3/1e21/2wTQa5088v9A0lVvWnaL\npN0RsVHS7uo8gGWkMfwR8ZCkY29avFnSjur0DknX9LgvAH221Nf8ExFxuDr9gqSJHvUDYEC6fsMv\nIkJS1NVtb7U9ZXtqWqe63RyAHllq+I/YXidJ1e+jdReMiG0RMRkRk2NatcTNAei1pYZ/p6Qt1ekt\nku7rTTsABqWTob67Jf1c0gdsH7R9vaTbJX3c9n5JH6vOA1hGVjRdICKuqyld2eNeAAwQR/gBSRF+\nICnCDyRF+IGkCD+QFOEHkiL8QFKEH0iK8ANJEX4gKcIPJEX4gaQIP5AU4QeSIvxAUoQfSIrwA0kR\nfiApwg8kRfiBpAg/kBThB5Ii/EBShB9IivADSRF+ICnCDyRF+IGkCD+QFOEHkmoMv+3tto/a3rtg\n2W22D9neU/1c3d82AfRaJ4/8P5B01SLLvxURl1U/9/e2LQD91hj+iHhI0rEB9AJggLp5zX+T7Seq\nlwVre9YRgIFYavi/J+liSZdJOizpG3UXtL3V9pTtqWmdWuLmAPTaksIfEUciYjYi5iR9X9KmwmW3\nRcRkREyOadVS+wTQY0sKv+11C85eK2lv3WUBDKcVTRewfbekj0i6wPZBSV+V9BHbl0kKSQck3djH\nHgH0QWP4I+K6RRbf2YdeAAwQR/gBSRF+ICnCDyRF+IGkCD+QFOEHkiL8QFKEH0iK8ANJEX4gKcIP\nJEX4gaQIP5AU4QeSIvxAUoQfSIrwA0kRfiApwg8kRfiBpAg/kBThB5Ii/EBShB9IivADSRF+ICnC\nDyRF+IGkCD+QFOEHkmoMv+0Nth+0/bTtp2x/sVo+bnuX7f3V77X9bxdAr3TyyD8j6csRcamkP5T0\neduXSrpF0u6I2Chpd3UewDLRGP6IOBwRj1enT0jaJ2m9pM2SdlQX2yHpmn41CaD33tZrftsXSfqQ\npEckTUTE4ar0gqSJnnYGoK86Dr/tcyX9WNKXIuKVhbWICElRs95W21O2p6Z1qqtmAfROR+G3Pab5\n4N8VEfdUi4/YXlfV10k6uti6EbEtIiYjYnJMq3rRM4Ae6OTdfku6U9K+iPjmgtJOSVuq01sk3df7\n9gD0y4oOLvPHkv5M0pO291TLbpV0u6R/sX29pOckfbo/LQLoh8bwR8TPJLmmfGVv2wEwKBzhByRF\n+IGkCD+QFOEHkiL8QFKEH0iqk3F+9NmIFz0yOj32S3/xyA8kRfiBpAg/kBThB5Ii/EBShB9IivAD\nSTHO3wtzc12tftaK6a7WH3XdJ67b101vYyOzxTpHAXSHR34gKcIPJEX4gaQIP5AU4QeSIvxAUoQf\nSGrw4/ylcV+3d1/kkYbx6NHR2tLcqfI0ZKPnjxfr7z/vxfK2k1p/9vFi/eBI/W0iSTE9U1vzqobZ\no2YbjjGYa/EogygcV/I22uKRH0iK8ANJEX4gKcIPJEX4gaQIP5AU4QeSahznt71B0g8lTWh+FHFb\nRHzb9m2S/lzSmUHqWyPi/sYtRmEgMspjq/1UGjqV6ucon1+5PLi6/+YPFOv3/s7flTeusWJ1hcrj\n3W3qprevrf9Jsf7Rr9xcrF/4tYdrax5bWVw3ZuqPEXin6OQgnxlJX46Ix22fJ+kx27uq2rci4uv9\naw9AvzSGPyIOSzpcnT5he5+k9f1uDEB/va3X/LYvkvQhSY9Ui26y/YTt7bbX1qyz1faU7alplQ+D\nBTA4HYff9rmSfizpSxHxiqTvSbpY0mWaf2bwjcXWi4htETEZEZNjajieGsDAdBR+22OaD/5dEXGP\nJEXEkYiYjYg5Sd+XtKl/bQLotcbw27akOyXti4hvLli+bsHFrpW0t/ftAegXR8Mwle0rJP1U0pOS\nzgyI3SrpOs0/5Q9JByTdWL05WGvNqom4/N1/WluPc84q9hIr69+fnD27PBx2em15aOfEheX3Pl/+\nvfqxwGv/6NHiun8z8e/F+pqR8vWebRiHHG3xo9Dd6PZ6vTR7sljf+t/X1NaefnBjcd3xfeXeznqx\n/HXro6+XhwpHX6tf36fL6/rk67W1h391l46fOtLR96V38m7/z7T4MHfzmD6AobU8HzIAdI3wA0kR\nfiApwg8kRfiBpAg/kNRAv7p75r0jOvad+vH2Oy7ZUVx/tes/8ntB4au1peax9H6ajfJhze/Ucfwm\nTderab+sbbhN73n/rvpiqdYDx+fqx+Il6aXCV4O/EeX/5Rv2fba2NnNT5/8r78z/KgCNCD+QFOEH\nkiL8QFKEH0iK8ANJEX4gqcbP8/d0Y/aLkp5bsOgCSS8NrIG3Z1h7G9a+JHpbql729t6I+K1OLjjQ\n8L9l4/ZUREy21kDBsPY2rH1J9LZUbfXG034gKcIPJNV2+Le1vP2SYe1tWPuS6G2pWumt1df8ANrT\n9iM/gJa0En7bV9n+T9vP2L6ljR7q2D5g+0nbe2xPtdzLdttHbe9dsGzc9i7b+6vfi06T1lJvt9k+\nVO27Pbavbqm3DbYftP207adsf7Fa3uq+K/TVyn4b+NN+26OS/kvSxyUdlPSopOsi4umBNlLD9gFJ\nkxHR+piw7T+R9KqkH0bEB6tlfyvpWETcXt1xro2IrwxJb7dJerXtmZurCWXWLZxZWtI1kj6nFvdd\noa9Pq4X91sYj/yZJz0TEsxFxWtKPJG1uoY+hFxEPSTr2psWbJZ351pMdmv/nGbia3oZCRByOiMer\n0ycknZlZutV9V+irFW2Ef72k5xecP6jhmvI7JD1g+zHbW9tuZhETC2ZGekHSRJvNLKJx5uZBetPM\n0kOz75Yy43Wv8YbfW10REZdJ+qSkz1dPb4dSzL9mG6bhmo5mbh6URWaW/rU2991SZ7zutTbCf0jS\nhgXnL6yWDYWIOFT9PirpXg3f7MNHzkySWv0+2nI/vzZMMzcvNrO0hmDfDdOM122E/1FJG22/z/ZK\nSZ+RtLOFPt7C9jnVGzGyfY6kT2j4Zh/eKWlLdXqLpPta7OU3DMvMzXUzS6vlfTd0M15HxMB/JF2t\n+Xf8fynpr9rooaaviyX9R/XzVNu9Sbpb808DpzX/3sj1ks6XtFvSfkkPSBofot7+UfOzOT+h+aCt\na6m3KzT/lP4JSXuqn6vb3neFvlrZbxzhByTFG35AUoQfSIrwA0kRfiApwg8kRfiBpAg/kBThB5L6\nf9/dc4y4LLzkAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x118b0eb38>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.imshow(train_dataset[0])"
    ]
   },
   {
