save datasets in one pickle file

--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -391,7 +391,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "##########################################################################################"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Finally, let's save the data for later reuse:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle_file = os.path.join(data_root, 'notMNIST.pickle')\n",
+    "\n",
+    "try:\n",
+    "  f = open(pickle_file, 'wb')\n",
+    "  save = {\n",
+    "    'train_dataset': train_dataset,\n",
+    "    'train_labels': train_labels,\n",
+    "    'valid_dataset': valid_dataset,\n",
+    "    'valid_labels': valid_labels,\n",
+    "    'test_dataset': test_dataset,\n",
+    "    'test_labels': test_labels,\n",
+    "    }\n",
+    "  pickle.dump(save, f, pickle.HIGHEST_PROTOCOL)\n",
+    "  f.close()\n",
+    "except Exception as e:\n",
+    "  print('Unable to save data to', pickle_file, ':', e)\n",
+    "  raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compressed pickle size: 690800512\n"
+     ]
+    }
+   ],
+   "source": [
+    "statinfo = os.stat(pickle_file)\n",
+    "print('Compressed pickle size:', statinfo.st_size)"
    ]
   },
   {
