--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -113,29 +113,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_classes = 10\n",
-    "np.random.seed(133)\n",
-    "\n",
-    "def maybe_extract(filename, force=False):\n",
-    "  root = os.path.splitext(os.path.splitext(filename)[0])[0]  # remove .tar.gz\n",
-    "  if os.path.isdir(root) and not force:\n",
-    "    # You may override by setting force=True.\n",
-    "    print('%s already present - Skipping extraction of %s.' % (root, filename))\n",
-    "  else:\n",
-    "    print('Extracting data for %s. This may take a while. Please wait.' % root)\n",
-    "    tar = tarfile.open(filename)\n",
-    "    sys.stdout.flush()\n",
-    "    tar.extractall(data_root)\n",
-    "    tar.close()\n",
-    "  data_folders = [\n",
-    "    os.path.join(root, d) for d in sorted(os.listdir(root))\n",
-    "    if os.path.isdir(os.path.join(root, d))]\n",
-    "  if len(data_folders) != num_classes:\n",
-    "    raise Exception(\n",
-    "      'Expected %d folders, one per class. Found %d instead.' % (\n",
-    "        num_classes, len(data_folders)))\n",
-    "  print(data_folders)\n",
-    "  return data_folders"
+    "# num_classes = 10\n",
+    "# np.random.seed(133)\n",
+    "# \n",
+    "# def maybe_extract(filename, force=False):\n",
+    "#   root = os.path.splitext(os.path.splitext(filename)[0])[0]  # remove .tar.gz\n",
+    "#   if os.path.isdir(root) and not force:\n",
+    "#     # You may override by setting force=True.\n",
+    "#     print('%s already present - Skipping extraction of %s.' % (root, filename))\n",
+    "#   else:\n",
+    "#     print('Extracting data for %s. This may take a while. Please wait.' % root)\n",
+    "#     tar = tarfile.open(filename)\n",
+    "#     sys.stdout.flush()\n",
+    "#     tar.extractall(data_root)\n",
+    "#     tar.close()\n",
+    "#   data_folders = [\n",
+    "#     os.path.join(root, d) for d in sorted(os.listdir(root))\n",
+    "#     if os.path.isdir(os.path.join(root, d))]\n",
+    "#   if len(data_folders) != num_classes:\n",
+    "#     raise Exception(\n",
+    "#       'Expected %d folders, one per class. Found %d instead.' % (\n",
+    "#         num_classes, len(data_folders)))\n",
+    "#   print(data_folders)\n",
+    "#   return data_folders"
    ]
   },
   {
@@ -152,8 +152,8 @@
     }
    ],
    "source": [
-    "train_folders = maybe_extract(train_filename)\n",
-    "test_folders = maybe_extract(test_filename)"
+    "# train_folders = maybe_extract(train_filename)\n",
+    "# test_folders = maybe_extract(test_filename)"
    ]
   },
   {
@@ -162,56 +162,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_size = 28  # Pixel width and height.\n",
-    "pixel_depth = 255.0  # Number of levels per pixel.\n",
-    "\n",
-    "def load_letter(folder, min_num_images):\n",
-    "  \"\"\"Load the data for a single letter label.\"\"\"\n",
-    "  image_files = os.listdir(folder)\n",
-    "  dataset = np.ndarray(shape=(len(image_files), image_size, image_size),\n",
-    "                         dtype=np.float32)\n",
-    "  print(folder)\n",
-    "  num_images = 0\n",
-    "  for image in image_files:\n",
-    "    image_file = os.path.join(folder, image)\n",
-    "    try:\n",
-    "      image_data = (imageio.imread(image_file).astype(float) - \n",
-    "                    pixel_depth / 2) / pixel_depth\n",
-    "      if image_data.shape != (image_size, image_size):\n",
-    "        raise Exception('Unexpected image shape: %s' % str(image_data.shape))\n",
-    "      dataset[num_images, :, :] = image_data\n",
-    "      num_images = num_images + 1\n",
-    "    except (IOError, ValueError) as e:\n",
-    "      print('Could not read:', image_file, ':', e, '- it\\'s ok, skipping.')\n",
-    "    \n",
-    "  dataset = dataset[0:num_images, :, :]\n",
-    "  if num_images < min_num_images:\n",
-    "    raise Exception('Many fewer images than expected: %d < %d' %\n",
-    "                    (num_images, min_num_images))\n",
-    "    \n",
-    "  print('Full dataset tensor:', dataset.shape)\n",
-    "  print('Mean:', np.mean(dataset))\n",
-    "  print('Standard deviation:', np.std(dataset))\n",
-    "  return dataset\n",
-    "        \n",
-    "def maybe_pickle(data_folders, min_num_images_per_class, force=False):\n",
-    "  dataset_names = []\n",
-    "  for folder in data_folders:\n",
-    "    set_filename = folder + '.pickle'\n",
-    "    dataset_names.append(set_filename)\n",
-    "    if os.path.exists(set_filename) and not force:\n",
-    "      # You may override by setting force=True.\n",
-    "      print('%s already present - Skipping pickling.' % set_filename)\n",
-    "    else:\n",
-    "      print('Pickling %s.' % set_filename)\n",
-    "      dataset = load_letter(folder, min_num_images_per_class)\n",
-    "      try:\n",
-    "        with open(set_filename, 'wb') as f:\n",
-    "          pickle.dump(dataset, f, pickle.HIGHEST_PROTOCOL)\n",
-    "      except Exception as e:\n",
-    "        print('Unable to save data to', set_filename, ':', e)\n",
-    "  \n",
-    "  return dataset_names"
+    "# image_size = 28  # Pixel width and height.\n",
+    "# pixel_depth = 255.0  # Number of levels per pixel.\n",
+    "# \n",
+    "# def load_letter(folder, min_num_images):\n",
+    "#   \"\"\"Load the data for a single letter label.\"\"\"\n",
+    "#   image_files = os.listdir(folder)\n",
+    "#   dataset = np.ndarray(shape=(len(image_files), image_size, image_size),\n",
+    "#                          dtype=np.float32)\n",
+    "#   print(folder)\n",
+    "#   num_images = 0\n",
+    "#   for image in image_files:\n",
+    "#     image_file = os.path.join(folder, image)\n",
+    "#     try:\n",
+    "#       image_data = (imageio.imread(image_file).astype(float) - \n",
+    "#                     pixel_depth / 2) / pixel_depth\n",
+    "#       if image_data.shape != (image_size, image_size):\n",
+    "#         raise Exception('Unexpected image shape: %s' % str(image_data.shape))\n",
+    "#       dataset[num_images, :, :] = image_data\n",
+    "#       num_images = num_images + 1\n",
+    "#     except (IOError, ValueError) as e:\n",
+    "#       print('Could not read:', image_file, ':', e, '- it\\'s ok, skipping.')\n",
+    "#     \n",
+    "#   dataset = dataset[0:num_images, :, :]\n",
+    "#   if num_images < min_num_images:\n",
+    "#     raise Exception('Many fewer images than expected: %d < %d' %\n",
+    "#                     (num_images, min_num_images))\n",
+    "#     \n",
+    "#   print('Full dataset tensor:', dataset.shape)\n",
+    "#   print('Mean:', np.mean(dataset))\n",
+    "#   print('Standard deviation:', np.std(dataset))\n",
+    "#   return dataset\n",
+    "#         \n",
+    "# def maybe_pickle(data_folders, min_num_images_per_class, force=False):\n",
+    "#   dataset_names = []\n",
+    "#   for folder in data_folders:\n",
+    "#     set_filename = folder + '.pickle'\n",
+    "#     dataset_names.append(set_filename)\n",
+    "#     if os.path.exists(set_filename) and not force:\n",
+    "#       # You may override by setting force=True.\n",
+    "#       print('%s already present - Skipping pickling.' % set_filename)\n",
+    "#     else:\n",
+    "#       print('Pickling %s.' % set_filename)\n",
+    "#       dataset = load_letter(folder, min_num_images_per_class)\n",
+    "#       try:\n",
+    "#         with open(set_filename, 'wb') as f:\n",
+    "#           pickle.dump(dataset, f, pickle.HIGHEST_PROTOCOL)\n",
+    "#       except Exception as e:\n",
+    "#         print('Unable to save data to', set_filename, ':', e)\n",
+    "#   \n",
+    "#   return dataset_names"
    ]
   },
   {
@@ -228,8 +228,8 @@
     }
    ],
    "source": [
-    "train_datasets = maybe_pickle(train_folders, 45000)\n",
-    "test_datasets = maybe_pickle(test_folders, 1800)"
+    "# train_datasets = maybe_pickle(train_folders, 45000)\n",
+    "# test_datasets = maybe_pickle(test_folders, 1800)"
    ]
   },
   {
@@ -238,47 +238,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_arrays(nb_rows, img_size):\n",
-    "  if nb_rows:\n",
-    "    dataset = np.ndarray((nb_rows, img_size, img_size), dtype=np.float32)\n",
-    "    labels = np.ndarray(nb_rows, dtype=np.int32)\n",
-    "  else:\n",
-    "    dataset, labels = None, None\n",
-    "  return dataset, labels\n",
-    "\n",
-    "def merge_datasets(pickle_files, train_size, valid_size=0):\n",
-    "  num_classes = len(pickle_files)\n",
-    "  valid_dataset, valid_labels = make_arrays(valid_size, image_size)\n",
-    "  train_dataset, train_labels = make_arrays(train_size, image_size)\n",
-    "  vsize_per_class = valid_size // num_classes\n",
-    "  tsize_per_class = train_size // num_classes\n",
-    "    \n",
-    "  start_v, start_t = 0, 0\n",
-    "  end_v, end_t = vsize_per_class, tsize_per_class\n",
-    "  end_l = vsize_per_class+tsize_per_class\n",
-    "  for label, pickle_file in enumerate(pickle_files):       \n",
-    "    try:\n",
-    "      with open(pickle_file, 'rb') as f:\n",
-    "        letter_set = pickle.load(f)\n",
-    "        # let's shuffle the letters to have random validation and training set\n",
-    "        np.random.shuffle(letter_set)\n",
-    "        if valid_dataset is not None:\n",
-    "          valid_letter = letter_set[:vsize_per_class, :, :]\n",
-    "          valid_dataset[start_v:end_v, :, :] = valid_letter\n",
-    "          valid_labels[start_v:end_v] = label\n",
-    "          start_v += vsize_per_class\n",
-    "          end_v += vsize_per_class\n",
-    "                    \n",
-    "        train_letter = letter_set[vsize_per_class:end_l, :, :]\n",
-    "        train_dataset[start_t:end_t, :, :] = train_letter\n",
-    "        train_labels[start_t:end_t] = label\n",
-    "        start_t += tsize_per_class\n",
-    "        end_t += tsize_per_class\n",
-    "    except Exception as e:\n",
-    "      print('Unable to process data from', pickle_file, ':', e)\n",
-    "      raise\n",
-    "    \n",
-    "  return valid_dataset, valid_labels, train_dataset, train_labels"
+    "# def make_arrays(nb_rows, img_size):\n",
+    "#   if nb_rows:\n",
+    "#     dataset = np.ndarray((nb_rows, img_size, img_size), dtype=np.float32)\n",
+    "#     labels = np.ndarray(nb_rows, dtype=np.int32)\n",
+    "#   else:\n",
+    "#     dataset, labels = None, None\n",
+    "#   return dataset, labels\n",
+    "# \n",
+    "# def merge_datasets(pickle_files, train_size, valid_size=0):\n",
+    "#   num_classes = len(pickle_files)\n",
+    "#   valid_dataset, valid_labels = make_arrays(valid_size, image_size)\n",
+    "#   train_dataset, train_labels = make_arrays(train_size, image_size)\n",
+    "#   vsize_per_class = valid_size // num_classes\n",
+    "#   tsize_per_class = train_size // num_classes\n",
+    "#     \n",
+    "#   start_v, start_t = 0, 0\n",
+    "#   end_v, end_t = vsize_per_class, tsize_per_class\n",
+    "#   end_l = vsize_per_class+tsize_per_class\n",
+    "#   for label, pickle_file in enumerate(pickle_files):       \n",
+    "#     try:\n",
+    "#       with open(pickle_file, 'rb') as f:\n",
+    "#         letter_set = pickle.load(f)\n",
+    "#         # let's shuffle the letters to have random validation and training set\n",
+    "#         np.random.shuffle(letter_set)\n",
+    "#         if valid_dataset is not None:\n",
+    "#           valid_letter = letter_set[:vsize_per_class, :, :]\n",
+    "#           valid_dataset[start_v:end_v, :, :] = valid_letter\n",
+    "#           valid_labels[start_v:end_v] = label\n",
+    "#           start_v += vsize_per_class\n",
+    "#           end_v += vsize_per_class\n",
+    "#                     \n",
+    "#         train_letter = letter_set[vsize_per_class:end_l, :, :]\n",
+    "#         train_dataset[start_t:end_t, :, :] = train_letter\n",
+    "#         train_labels[start_t:end_t] = label\n",
+    "#         start_t += tsize_per_class\n",
+    "#         end_t += tsize_per_class\n",
+    "#     except Exception as e:\n",
+    "#       print('Unable to process data from', pickle_file, ':', e)\n",
+    "#       raise\n",
+    "#     \n",
+    "#   return valid_dataset, valid_labels, train_dataset, train_labels"
    ]
   },
   {
@@ -295,17 +295,17 @@
     }
    ],
    "source": [
-    "train_size = 200000\n",
-    "valid_size = 10000\n",
-    "test_size = 10000\n",
-    "\n",
-    "valid_dataset, valid_labels, train_dataset, train_labels = merge_datasets(\n",
-    "  train_datasets, train_size, valid_size)\n",
-    "_, _, test_dataset, test_labels = merge_datasets(test_datasets, test_size)\n",
-    "\n",
-    "print('Training:', train_dataset.shape, train_labels.shape)\n",
-    "print('Validation:', valid_dataset.shape, valid_labels.shape)\n",
-    "print('Testing:', test_dataset.shape, test_labels.shape)"
+    "# train_size = 200000\n",
+    "# valid_size = 10000\n",
+    "# test_size = 10000\n",
+    "# \n",
+    "# valid_dataset, valid_labels, train_dataset, train_labels = merge_datasets(\n",
+    "#   train_datasets, train_size, valid_size)\n",
+    "# _, _, test_dataset, test_labels = merge_datasets(test_datasets, test_size)\n",
+    "# \n",
+    "# print('Training:', train_dataset.shape, train_labels.shape)\n",
+    "# print('Validation:', valid_dataset.shape, valid_labels.shape)\n",
+    "# print('Testing:', test_dataset.shape, test_labels.shape)"
    ]
   },
   {
@@ -335,7 +335,7 @@
     }
    ],
    "source": [
-    "plt.imshow(train_dataset[0])"
+    "# plt.imshow(train_dataset[0])"
    ]
   },
   {
@@ -344,15 +344,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def randomize(dataset, labels):\n",
-    "  permutation = np.random.permutation(labels.shape[0])\n",
-    "  shuffled_dataset = dataset[permutation,:,:]\n",
-    "  shuffled_labels = labels[permutation]\n",
-    "  return shuffled_dataset, shuffled_labels\n",
-    "\n",
-    "train_dataset, train_labels = randomize(train_dataset, train_labels)\n",
-    "test_dataset, test_labels = randomize(test_dataset, test_labels)\n",
-    "valid_dataset, valid_labels = randomize(valid_dataset, valid_labels)"
+    "# def randomize(dataset, labels):\n",
+    "#   permutation = np.random.permutation(labels.shape[0])\n",
+    "#   shuffled_dataset = dataset[permutation,:,:]\n",
+    "#   shuffled_labels = labels[permutation]\n",
+    "#   return shuffled_dataset, shuffled_labels\n",
+    "# \n",
+    "# train_dataset, train_labels = randomize(train_dataset, train_labels)\n",
+    "# test_dataset, test_labels = randomize(test_dataset, test_labels)\n",
+    "# valid_dataset, valid_labels = randomize(valid_dataset, valid_labels)"
    ]
   },
   {
@@ -382,7 +382,7 @@
     }
    ],
    "source": [
-    "plt.imshow(train_dataset[0])"
+    "# plt.imshow(train_dataset[0])"
    ]
   },
   {
@@ -403,32 +403,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle_file = os.path.join(data_root, 'notMNIST.pickle')\n",
-    "\n",
-    "try:\n",
-    "  f = open(pickle_file, 'wb')\n",
-    "  save = {\n",
-    "    'train_dataset': train_dataset,\n",
-    "    'train_labels': train_labels,\n",
-    "    'valid_dataset': valid_dataset,\n",
-    "    'valid_labels': valid_labels,\n",
-    "    'test_dataset': test_dataset,\n",
-    "    'test_labels': test_labels,\n",
-    "    }\n",
-    "  pickle.dump(save, f, pickle.HIGHEST_PROTOCOL)\n",
-    "  f.close()\n",
-    "except Exception as e:\n",
-    "  print('Unable to save data to', pickle_file, ':', e)\n",
-    "  raise"
+    "pickle_file = os.path.join(data_root, 'notMNIST.pickle')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try:\n",
+    "#   f = open(pickle_file, 'wb')\n",
+    "#   save = {\n",
+    "#     'train_dataset': train_dataset,\n",
+    "#     'train_labels': train_labels,\n",
+    "#     'valid_dataset': valid_dataset,\n",
+    "#     'valid_labels': valid_labels,\n",
+    "#     'test_dataset': test_dataset,\n",
+    "#     'test_labels': test_labels,\n",
+    "#     }\n",
+    "#   pickle.dump(save, f, pickle.HIGHEST_PROTOCOL)\n",
+    "#   f.close()\n",
+    "# except Exception as e:\n",
+    "#   print('Unable to save data to', pickle_file, ':', e)\n",
+    "#   raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
