loading data from notMNIST.pickle

--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -453,6 +453,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    with open(pickle_file, 'rb') as f:\n",
+    "        data_set = pickle.load(f)\n",
+    "except Exception as e:\n",
+    "    print('Unable to process data from', pickle_file, ':', e)\n",
+    "    raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = data_set['train_dataset']\n",
+    "train_labels = data_set['train_labels']\n",
+    "valid_dataset = data_set['valid_dataset']\n",
+    "valid_labels = data_set['valid_labels']\n",
+    "test_dataset = data_set['test_dataset']\n",
+    "test_labels = data_set['test_labels']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
