train, test, valid shapes

--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -43,11 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set (200000, 28, 28) (200000,)\nValidation set (10000, 28, 28) (10000,)\nTest set (10000, 28, 28) (10000,)\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "del save  # hint to help gc free up memory\n",
+    "print('Training set', train_dataset.shape, train_labels.shape)\n",
+    "print('Validation set', valid_dataset.shape, valid_labels.shape)\n",
+    "print('Test set', test_dataset.shape, test_labels.shape)"
    ]
   },
   {
