--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -152,11 +152,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss at step 0: 18.273275\nTraining accuracy: 8.6%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 12.6%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss at step 100: 2.365513\nTraining accuracy: 71.7%\nValidation accuracy: 70.2%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss at step 200: 1.885018\nTraining accuracy: 74.8%\nValidation accuracy: 72.7%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss at step 300: 1.629336\nTraining accuracy: 76.0%\nValidation accuracy: 73.6%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss at step 400: 1.460384\nTraining accuracy: 76.8%\nValidation accuracy: 74.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss at step 500: 1.336608\nTraining accuracy: 77.4%\nValidation accuracy: 74.3%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss at step 600: 1.240377\nTraining accuracy: 78.1%\nValidation accuracy: 74.7%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss at step 700: 1.162381\nTraining accuracy: 78.6%\nValidation accuracy: 75.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss at step 800: 1.097288\nTraining accuracy: 79.0%\nValidation accuracy: 75.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 81.6%\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "num_steps = 801\n",
+    "\n",
+    "def accuracy(predictions, labels):\n",
+    "  return (100.0 * np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1))\n",
+    "          / predictions.shape[0])\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "  # This is a one-time operation which ensures the parameters get initialized as\n",
+    "  # we described in the graph: random weights for the matrix, zeros for the\n",
+    "  # biases. \n",
+    "  tf.global_variables_initializer().run()\n",
+    "  print('Initialized')\n",
+    "  for step in range(num_steps):\n",
+    "    # Run the computations. We tell .run() that we want to run the optimizer,\n",
+    "    # and get the loss value and the training predictions returned as numpy\n",
+    "    # arrays.\n",
+    "    _, l, predictions = session.run([optimizer, loss, train_prediction])\n",
+    "    if (step % 100 == 0):\n",
+    "      print('Loss at step %d: %f' % (step, l))\n",
+    "      print('Training accuracy: %.1f%%' % accuracy(\n",
+    "        predictions, train_labels[:train_subset, :]))\n",
+    "      # Calling .eval() on valid_prediction is basically like calling run(), but\n",
+    "      # just to get that one numpy array. Note that it recomputes all its graph\n",
+    "      # dependencies.\n",
+    "      print('Validation accuracy: %.1f%%' % accuracy(\n",
+    "        valid_prediction.eval(), valid_labels))\n",
+    "  print('Test accuracy: %.1f%%' % accuracy(test_prediction.eval(), test_labels))"
    ]
   },
   {
