--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -271,6 +271,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SGD Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 128\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "\n",
+    "  # Input data. For the training data, we use a placeholder that will be fed\n",
+    "  # at run time with a training minibatch.\n",
+    "  tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                    shape=(batch_size, image_size * image_size))\n",
+    "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "  tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "  tf_test_dataset = tf.constant(test_dataset)\n",
+    "  \n",
+    "  # Variables.\n",
+    "  weights = tf.Variable(\n",
+    "    tf.truncated_normal([image_size * image_size, num_labels]))\n",
+    "  biases = tf.Variable(tf.zeros([num_labels]))\n",
+    "  \n",
+    "  # Training computation.\n",
+    "  logits = tf.matmul(tf_train_dataset, weights) + biases\n",
+    "  loss = tf.reduce_mean(\n",
+    "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
+    "  \n",
+    "  # Optimizer.\n",
+    "  optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
+    "  \n",
+    "  # Predictions for the training, validation, and test data.\n",
+    "  train_prediction = tf.nn.softmax(logits)\n",
+    "  valid_prediction = tf.nn.softmax(\n",
+    "    tf.matmul(tf_valid_dataset, weights) + biases)\n",
+    "  test_prediction = tf.nn.softmax(tf.matmul(tf_test_dataset, weights) + biases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\nMinibatch loss at step 0: 16.634697\nMinibatch accuracy: 15.6%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 16.9%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 500: 1.240972\nMinibatch accuracy: 81.2%\nValidation accuracy: 75.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 1000: 1.938414\nMinibatch accuracy: 68.0%\nValidation accuracy: 76.7%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 1500: 0.953010\nMinibatch accuracy: 82.8%\nValidation accuracy: 77.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 2000: 0.858595\nMinibatch accuracy: 82.0%\nValidation accuracy: 77.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 2500: 1.211373\nMinibatch accuracy: 73.4%\nValidation accuracy: 77.3%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 3000: 1.051481\nMinibatch accuracy: 79.7%\nValidation accuracy: 78.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 85.7%\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_steps = 3001\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "  tf.global_variables_initializer().run()\n",
+    "  print(\"Initialized\")\n",
+    "  for step in range(num_steps):\n",
+    "    # Pick an offset within the training data, which has been randomized.\n",
+    "    # Note: we could use better randomization across epochs.\n",
+    "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "    # Generate a minibatch.\n",
+    "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "    batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "    # and the value is the numpy array to feed to it.\n",
+    "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "    _, l, predictions = session.run(\n",
+    "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "    if (step % 500 == 0):\n",
+    "      print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "      print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+    "        valid_prediction.eval(), valid_labels))\n",
+    "  print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
