--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -64,20 +64,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "image_size = 28\n",
+    "num_labels = 10\n",
+    "\n",
+    "def reformat(dataset, labels):\n",
+    "  dataset = dataset.reshape((-1, image_size * image_size)).astype(np.float32)\n",
+    "  # Map 1 to [0.0, 1.0, 0.0 ...], 2 to [0.0, 0.0, 1.0 ...]\n",
+    "  labels = (np.arange(num_labels) == labels[:,None]).astype(np.float32)\n",
+    "  return dataset, labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set (200000, 784) (200000, 10)\nValidation set (10000, 784) (10000, 10)\nTest set (10000, 784) (10000, 10)\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "train_dataset, train_labels = reformat(train_dataset, train_labels)\n",
+    "valid_dataset, valid_labels = reformat(valid_dataset, valid_labels)\n",
+    "test_dataset, test_labels = reformat(test_dataset, test_labels)\n",
+    "print('Training set', train_dataset.shape, train_labels.shape)\n",
+    "print('Validation set', valid_dataset.shape, valid_labels.shape)\n",
+    "print('Test set', test_dataset.shape, test_labels.shape)"
    ]
   },
   {
