--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -74,7 +74,7 @@
     "def reformat(dataset, labels):\n",
     "  dataset = dataset.reshape((-1, image_size * image_size)).astype(np.float32)\n",
     "  # Map 1 to [0.0, 1.0, 0.0 ...], 2 to [0.0, 0.0, 1.0 ...]\n",
-    "  labels = (np.arange(num_labels) == labels[:,None]).astype(np.float32)\n",
+    "  labels = (np.arange(num_labels) == labels[:, None]).astype(np.float32)\n",
     "  return dataset, labels"
    ]
   },
@@ -102,20 +102,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "def accuracy(predictions, labels):\n",
+    "  return (100.0 * np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1))\n",
+    "          / predictions.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SGD with L2 Regularization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "batch_size = 128\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "\n",
+    "  # Input data. For the training data, we use a placeholder that will be fed\n",
+    "  # at run time with a training minibatch.\n",
+    "  tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                    shape=(batch_size, image_size * image_size))\n",
+    "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "  tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "  tf_test_dataset = tf.constant(test_dataset)\n",
+    "  \n",
+    "  # Variables.\n",
+    "  weights = tf.Variable(\n",
+    "    tf.truncated_normal([image_size * image_size, num_labels]))\n",
+    "  biases = tf.Variable(tf.zeros([num_labels]))\n",
+    "  \n",
+    "  # Training computation.\n",
+    "  logits = tf.matmul(tf_train_dataset, weights) + biases\n",
+    "  loss = tf.reduce_mean(\n",
+    "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits)) + \\\n",
+    "         tf.nn.l2_loss(tf.norm(weights))\n",
+    "  # Optimizer.\n",
+    "  optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
+    "  \n",
+    "  # Predictions for the training, validation, and test data.\n",
+    "  train_prediction = tf.nn.softmax(logits)\n",
+    "  valid_prediction = tf.nn.softmax(\n",
+    "    tf.matmul(tf_valid_dataset, weights) + biases)\n",
+    "  test_prediction = tf.nn.softmax(tf.matmul(tf_test_dataset, weights) + biases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\nMinibatch loss at step 0: 3072.318115\nMinibatch accuracy: 20.3%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 15.1%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 500: 2.273528\nMinibatch accuracy: 43.0%\nValidation accuracy: 48.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 1000: 2.550953\nMinibatch accuracy: 37.5%\nValidation accuracy: 47.4%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 1500: 2.182162\nMinibatch accuracy: 53.9%\nValidation accuracy: 46.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 2000: 2.000694\nMinibatch accuracy: 50.8%\nValidation accuracy: 44.6%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 2500: 1.861214\nMinibatch accuracy: 67.2%\nValidation accuracy: 41.4%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 3000: 2.145055\nMinibatch accuracy: 46.1%\nValidation accuracy: 38.4%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 3500: 2.034441\nMinibatch accuracy: 60.9%\nValidation accuracy: 53.9%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 4000: 2.452129\nMinibatch accuracy: 51.6%\nValidation accuracy: 54.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 4500: 2.213572\nMinibatch accuracy: 52.3%\nValidation accuracy: 42.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 5000: 2.578850\nMinibatch accuracy: 39.1%\nValidation accuracy: 41.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 5500: 2.062583\nMinibatch accuracy: 53.1%\nValidation accuracy: 53.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 6000: 2.282279\nMinibatch accuracy: 39.1%\nValidation accuracy: 48.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 6500: 2.153857\nMinibatch accuracy: 41.4%\nValidation accuracy: 49.6%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 7000: 2.357007\nMinibatch accuracy: 35.2%\nValidation accuracy: 40.3%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 7500: 1.937504\nMinibatch accuracy: 60.2%\nValidation accuracy: 55.2%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 8000: 2.408006\nMinibatch accuracy: 52.3%\nValidation accuracy: 45.9%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 8500: 2.211872\nMinibatch accuracy: 50.0%\nValidation accuracy: 48.9%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 9000: 2.022515\nMinibatch accuracy: 54.7%\nValidation accuracy: 54.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 9500: 2.135462\nMinibatch accuracy: 47.7%\nValidation accuracy: 45.7%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 10000: 2.308667\nMinibatch accuracy: 44.5%\nValidation accuracy: 53.9%\nTest accuracy: 58.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_steps = 10001\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "  tf.global_variables_initializer().run()\n",
+    "  print(\"Initialized\")\n",
+    "  for step in range(num_steps):\n",
+    "    # Pick an offset within the training data, which has been randomized.\n",
+    "    # Note: we could use better randomization across epochs.\n",
+    "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "    # Generate a minibatch.\n",
+    "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "    batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "    # and the value is the numpy array to feed to it.\n",
+    "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "    _, l, predictions = session.run(\n",
+    "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "    if (step % 500 == 0):\n",
+    "      print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "      print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+    "        valid_prediction.eval(), valid_labels))\n",
+    "  print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
    ]
   },
   {
